--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_4/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_4/css/invessenceCustom.css
@@ -6131,11 +6131,116 @@ li.strategy_list {
     padding: 0;
 }
 
+/*** 22/09/2017 advisore model**/
 
+.customtabs_model input:checked + label {
+    background: #009abb;
+    color: #fff;
+    border: none;
+    padding: 12px 30px;
+    font-size: 18px;
+}
+.customtabs_model section#content1 {
+       border-top: none;
+    background: none;
+}
+.customtabs_model .tabspad label {
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);
+    padding: 12px 30px;
+    font-size: 18px;
+    color: #009abb;    
+}
+.customtabs_model input#tab2 + label:after,
+.customtabs_model input#tab3 + label:after,
+.customtabs_model input#tab4 + label:after
+{
+	background:none;
+}
+.customtabs_model label.rollbackbutton,
+.customtabs_model .tabspad .contentSecond label,
+.customtabs_model .tabspad #validateForm label,
+.customtabs_model  .tabspad #rvwMainFrm label
+ {
+    box-shadow: none;
+}
+.customtabs_model #updExtForm div {
+       width: 90%;
+    float: left;
+    margin: 10px 5%;
+}
+.customtabs_model #updExtForm label {
+    width: 44%;
+    float: left;
+}
+.customtabs_model #updExtForm label .span_model_nm {
+   width: auto;
+    float: left;
+    margin: 5px;
+    position: relative;
+    top: 0;
+}
+.customtabs_model #updExtForm div div {
+    margin: 0;
+}
+.customtabs_model #updExtForm div.uploadtable {
+    width: 98%;
+    margin: 10px;
+}
+.customtabs_model #updExtForm div.uploadtable div {
+    width: 100%;
+}
+.customtabs_model .uploadradiobutton input {
+    margin: 0;
+}
+.customtabs_model .uploadradiobutton table {
+    margin: -10px 0 0;
+}
 
+.customtabs_model .uploadradiobutton table label {
+    width: auto !important;
+    padding: 10px 0;
+}
+.customtabs_model .validtable {
+    width: 100%;
+    float: left;
+}
+.customtabs_model #validateForm label {
+    width: 29%;
+    float: left;
+}
+.customtabs_model #validateForm span.span_model_nm,
+.customtabs_model #rvwMainFrm span.span_model_nm,
+.customtabs_model #approveForm span.span_model_nm,
+.customtabs_model .contentSecond span.span_model_nm
+ {
+    position: relative;
+    top: -8px;
+}
+.customtabs_model .tabspad #rvwMainFrm label {
+   
+    width: 44%;
+    float: left;
+}
+.customtabs_model .tabspad #approveForm label {
+    box-shadow: none;
+    width: 28%;
+    float: left;
+}
+.customtabs_model section {
+    float: left;
+    width: 90%;
+    margin: 10px 5%;
+    background: #f7f7f7;
+    border: none;
+    border-radius: 4px;
+}
 
-
-
+.customtabs_model .uploadbuttons .ui-fileupload-cancel {
+    display: none;
+}
+.customtabs_model .tabspad {
+    border-bottom: 2px solid #009abb;
+}
 
 
 
