--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_4/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_4/css/invessence.css
@@ -1646,175 +1646,416 @@ thead > tr > .multipleSelectionChkList > .ui-chkbox > .ui-chkbox-box {
 }
 
 /*Commented by Sagar*/
-/*main.customtabs {*/
-	/*min-width: 320px;*/
-	/*max-width: 100%;*/
-	/*padding: 50px 0px;*/
-	/*!*margin: 0 auto; *!*/
-	/*background: #fff;*/
-	/*position: relative;*/
-	/*float: left;*/
-	/*width: 100%;*/
-/*}*/
+main.customtabs {
+	min-width: 320px;
+	max-width: 100%;
+	padding: 50px 0px;
+	/*margin: 0 auto; */
+	background: #fff;
+	position: relative;
+	float: left;
+	width: 100%;
+}
 
-/*.customtabs section {*/
-	/*display: none;*/
-	/*padding: 20px 0 0;*/
-	/*border-top: 1px solid #009abb ;*/
-/*}*/
+.customtabs section {
+	display: none;
+	padding: 20px 0 0;
+	border-top: 1px solid #009abb ;
+}
 
 /*.customtabs input {*/
 	/*display: none;*/
 /*}*/
-/*.customtabs label {*/
-	/*display: inline-block;*/
-	/*margin: 0 0 -1px;*/
-	/*padding: 15px 25px;*/
-	/*font-weight: 600;*/
-	/*text-align: center;*/
-	/*color: #bbb;*/
-	/*border: 1px solid transparent;*/
-/*}*/
-/*.customtabs label.tabsui {*/
-	/*display: inline-block;*/
-	/*margin: 0 -2px -1px;*/
-	/*padding: 15px 25px;*/
-	/*font-weight: 600;*/
-	/*text-align: center;*/
-	/*color: #bbb;*/
-	/*border: 1px solid transparent;*/
+.customtabs label {
+	display: inline-block;
+	margin: 0 0 -1px;
+	padding: 15px 25px;
+	font-weight: 600;
+	text-align: center;
+	color: #bbb;
+	border: 1px solid transparent;
+}
+.customtabs label.tabsui {
+	display: inline-block;
+	margin: 0 -2px -1px;
+	padding: 15px 25px;
+	font-weight: 600;
+	text-align: center;
+	color: #bbb;
+	border: 1px solid transparent;
 
 
-	/*border-radius: 0px;*/
-	/*padding: 10px 30px;*/
-	/*color: #009abb !important;*/
-	/*font-size: 18px !important;*/
-	/*-moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);*/
-	/*-webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);*/
-	/*box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);*/
-	/*-webkit-transition: all 600ms ease;*/
-	/*-moz-transition: all 600ms ease;*/
-	/*-ms-transition: all 600ms ease;*/
-	/*-o-transition: all 600ms ease;*/
-	/*transition: all 600ms ease;*/
-/*}*/
+	border-radius: 0px;
+	padding: 10px 30px;
+	color: #009abb !important;
+	font-size: 18px !important;
+	-moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
+	-webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
+	box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
 
-/*.customtabs label:before {*/
-	/*font-family: fontawesome;*/
-	/*font-weight: normal;*/
-	/*margin-right: 10px;*/
-/*}*/
+.customtabs label:before {
+	font-family: fontawesome;
+	font-weight: normal;
+	margin-right: 10px;
+}
 
-/*.customtabs label[for*='1']:before { content: '\f1cb'; }
+.customtabs label[for*='1']:before { content: '\f1cb'; }
 .customtabs label[for*='2']:before { content: '\f17d'; }
 .customtabs label[for*='3']:before { content: '\f16b'; }
-.customtabs label[for*='4']:before { content: '\f1a9'; }*/
+.customtabs label[for*='4']:before { content: '\f1a9'; }
 
-/*.customtabs label:hover {*/
-	/*color: #888;*/
-	/*cursor: pointer;*/
-/*}*/
-/*.customtabs input:checked + label {*/
-	/*color: #555;*/
-	/*border: 1px solid #ddd;*/
-	/*border-top: 2px solid #d0525d;*/
-	/*border-bottom: 1px solid #fff;*/
-/*}*/
-/*.customtabs input:checked + label.tabsui {*/
+.customtabs label:hover {
+	color: #888;
+	cursor: pointer;
+}
+.customtabs input:checked + label {
+	color: #555;
+	border: 1px solid #ddd;
+	border-top: 2px solid #d0525d;
+	border-bottom: 1px solid #fff;
+}
+.customtabs input:checked + label.tabsui {
 
-	/*border: 1px solid #ddd;*/
+	border: 1px solid #ddd;
 
-	/*border-bottom: 1px solid #fff;*/
-
-
-	/*background-color: #009abb !important;*/
-	/*color: #fff !important;*/
-	/*padding: 10px 30px;*/
-	/*border-radius: 0px;*/
-	/*-moz-box-shadow: none;*/
-	/*-webkit-box-shadow: none;*/
-	/*box-shadow: none;*/
-	/*-webkit-transition: all 600ms ease;*/
-	/*-moz-transition: all 600ms ease;*/
-	/*-ms-transition: all 600ms ease;*/
-	/*-o-transition: all 600ms ease;*/
-	/*transition: all 600ms ease;*/
-	/*margin-right: 2px;*/
-	/*font-size: 18px !important;*/
-/*}*/
+	border-bottom: 1px solid #fff;
 
 
-/*.customtabs #tab1:checked ~ #content1,*/
-/*.customtabs #tab2:checked ~ #content2,*/
-/*.customtabs #tab3:checked ~ #content3,*/
-/*.customtabs #tab4:checked ~ #content4,*/
-/*.customtabs #tab5:checked ~ #content5{*/
-	/*display: block;*/
-	/*position: relative;*/
+	background-color: #009abb !important;
+	color: #fff !important;
+	padding: 10px 30px;
+	border-radius: 0px;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	transition: all 600ms ease;
+	margin-right: 2px;
+	font-size: 18px !important;
+}
 
-/*}*/
 
-/*.bgcontain{*/
-	/*padding:10px 00px 10px 00px !important;*/
-/*}*/
+.customtabs #tab1:checked ~ #content1,
+.customtabs #tab2:checked ~ #content2,
+.customtabs #tab3:checked ~ #content3,
+.customtabs #tab4:checked ~ #content4,
+.customtabs #tab5:checked ~ #content5{
+	display: block;
+	position: relative;
 
-/*.tabspad{*/
-	/*position: relative;*/
-	/*padding: 0 20px;*/
+}
 
-/*}*/
+.bgcontain{
+	padding:10px 00px 10px 00px !important;
+}
 
-/*.ui-selectonemenu {*/
-	/*float:right !important;*/
-	/*margin-top:-6px !important;*/
-	/*width:170px !important;*/
-	/*margin-left:5px !important;*/
-/*}*/
+.tabspad{
+	position: relative;
+	padding: 0 20px;
 
-/*.ui-selectoneradio{*/
-	/*float:right !important;*/
-	/*margin: -17px 0 0 5px !important;*/
-/*}*/
+}
 
-/*.uploadbuttons .ui-fileupload .ui-fileupload-buttonbar button.ui-fileupload-cancel{*/
-	/*display: none !important;*/
-/*}*/
-/*.uploadtable, .validtable{*/
-	/*width:100% !important;*/
-	/*position: relative !important;*/
-	/*text-align: center !important;*/
-	/*margin: 0 auto !important;*/
-	/*float: left !important;*/
-	/*display: block !important;*/
-/*}*/
-/*.uploadtable .ui-datatable, .validtable .ui-datatable{*/
-	/*width:100% !important;*/
-	/*margin: 0 auto !important;*/
-	/*max-width: 900px !important;*/
-/*}*/
+.ui-select/*onemenu {
+	float:right !important;
+	margin-top:-6px !important;
+	width:170px !important;
+	margin-left:5px !important;
+}*/
 
-/*.uploadradiobutton .ui-outputlabel table.ui-selectoneradio tbody tr td label{*/
-	/*padding:15px 26px 15px 0px !important;*/
-/*}*/
+.ui-selectoneradio{
+	float:right !important;
+	margin: -17px 0 0 5px !important;
+}
 
-/*.uploadradiobutton label input{*/
-	/*float:right;*/
-	/*margin-top: -7px !important;*/
-/*}*/
+.uploadbuttons .ui-fileupload .ui-fileupload-buttonbar button.ui-fileupload-cancel{
+	display: none !important;
+}
+.uploadtable, .validtable{
+	width:100% !important;
+	position: relative !important;
+	text-align: center !important;
+	margin: 0 auto !important;
+	float: left !important;
+	display: block !important;
+}
+.uploadtable .ui-datatable, .validtable .ui-datatable{
+	width:100% !important;
+	margin: 0 auto !important;
+	max-width: 900px !important;
+}
 
-/*.ui-slider-vertical{*/
-	/*height:94% !important;*/
-	/*margin-top:0px !important;*/
-/*}*/
+.uploadradiobutton .ui-outputlabel table.ui-selectoneradio tbody tr td label{
+	padding:15px 26px 15px 0px !important;
+}
 
-/*.ui-slider-vertical .ui-slider-handle{*/
-	/*left:-13px !important;*/
-/*}*/
+.uploadradiobutton label input{
+	float:right;
+	margin-top: -7px !important;
+}
 
-/*.ui-slider-vertical{*/
-	/*background: none !important;*/
-/*}*/
-/*.rollbackbutton {*/
-	/*padding: 0 !important;*/
-	/*float: right !important;*/
-/*}*/
+.ui-slider-vertical{
+	height:94% !important;
+	margin-top:0px !important;
+}
+
+.ui-slider-vertical .ui-slider-handle{
+	left:-13px !important;
+}
+
+.ui-slider-vertical{
+	background: none !important;
+}
+.rollbackbutton {
+	padding: 0 !important;
+	float: right !important;
+}
+
+/*** 22/09/2017 advisore model**/
+
+.customtabs_model input:checked + label {
+	background: #009abb;
+	color: #fff;
+	border: none;
+	padding: 12px 30px;
+	font-size: 18px;
+}
+.customtabs_model section#content1 {
+	border-top: none;
+	background: none;
+}
+.customtabs_model .tabspad label {
+	box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);
+	padding: 12px 30px;
+	font-size: 18px;
+	color: #009abb;
+}
+.customtabs_model input#tab2 + label:after,
+.customtabs_model input#tab3 + label:after,
+.customtabs_model input#tab4 + label:after
+{
+	background:none;
+}
+.customtabs_model label.rollbackbutton,
+.customtabs_model .tabspad .contentSecond label,
+.customtabs_model .tabspad #validateForm label,
+.customtabs_model  .tabspad #rvwMainFrm label
+{
+	box-shadow: none;
+}
+.customtabs_model #updExtForm div {
+	width: 90%;
+	float: left;
+	margin: 10px 5%;
+}
+.customtabs_model #updExtForm label {
+	width: 43%;
+	float: left;
+}
+.customtabs_model #updExtForm label .span_model_nm {
+	width: auto;
+	float: left;
+	margin: 5px;
+	position: relative;
+	top: 0;
+}
+.customtabs_model #updExtForm div div {
+	margin: 0;
+}
+.customtabs_model #updExtForm div.uploadtable {
+	width: 98%;
+	margin: 10px;
+}
+.customtabs_model #updExtForm div.uploadtable div {
+	width: 100%;
+}
+.customtabs_model .uploadradiobutton input {
+	margin: 0;
+}
+.customtabs_model .uploadradiobutton table {
+	margin: -10px 0 0;
+}
+
+.customtabs_model .uploadradiobutton table label {
+	width: auto !important;
+	padding: 10px 0;
+}
+.customtabs_model .validtable {
+	width: 100%;
+	float: left;
+}
+.customtabs_model #validateForm label {
+	width: 29%;
+	float: left;
+}
+.customtabs_model #validateForm span.span_model_nm,
+.customtabs_model #rvwMainFrm span.span_model_nm,
+.customtabs_model #approveForm span.span_model_nm,
+.customtabs_model .contentSecond span.span_model_nm
+{
+	position: relative;
+	top: -8px;
+}
+.customtabs_model .tabspad #rvwMainFrm label {
+
+	width: 44%;
+	float: left;
+}
+.customtabs_model .tabspad #approveForm label {
+	box-shadow: none;
+	width: 28%;
+	float: left;
+}
+.customtabs_model section {
+	float: left;
+	width: 90%;
+	margin: 10px 5%;
+	background: #fff;
+	border: none;
+	border-radius: 4px;
+}
+
+.customtabs_model .uploadbuttons .ui-fileupload-cancel {
+	display: none;
+}
+.customtabs_model .tabspad {
+	border-bottom: 2px solid #009abb;
+}
+
+
+/** model advisor bb **/
+.customtabs_model_bb #validateForm span.span_model_nm,
+.customtabs_model_bb #rvwMainFrm span.span_model_nm,
+.customtabs_model_bb #approveForm span.span_model_nm,
+.customtabs_model_bb .contentSecond span.span_model_nm
+{
+	position: relative;
+	top: 0px;
+	float: left;
+}
+.customtabs_model_bb #updExtForm div div {
+	margin: 0;
+	float: left!important;
+	width: auto;
+}
+
+.customtabs_model_bb .uploadradiobutton table {
+	margin:-13px 15px -8px 0!important;
+	float:left !important;
+}
+.customtabs_model_bb #updExtForm div div.uploadbuttons {
+	width: 28%;
+	margin: 5px;
+	float: right !important;
+}
+.customtabs_model_bb #updExtForm .uploadradiobutton table label {
+	margin: 0 2px 0 -8px !important;
+	padding: 14px 0 !important;
+	color:#778D9B;
+}
+.customtabs_model_bb #updExtForm .uploadradiobutton table label:before{display:none;}
+.customtabs_model_bb #updExtForm div.uploadtable div {
+	max-width: 100% !important;
+}
+.customtabs_model_bb .uploadradiobutton label input {
+	width: 250px;
+	float:left !important;
+}
+.customtabs_model_bb #validateForm .validtable div {
+	max-width: 1045px !important;
+}
+.customtabs_model_bb .rollbackbutton {
+	width: 14% !important;
+/*	float: left !important;*/
+	margin: 5px 8%;
+}
+.customtabs_model_bb .tabspad input[type=radio] {
+	display: none;
+}
+.customtabs_model_bb #updExtForm label .span_model_nm {
+	width: 250px;
+	float: left;
+	margin: 5px;
+	position: relative;
+	top: 0;
+	text-align: left;
+	color:#778D9B;
+	font-size: 17px;
+}
+.customtabs_model_bb #updExtForm label .ui-selectonemenu,
+.customtabs_model_bb #validateForm .ui-selectonemenu,
+.customtabs_model_bb #approveForm .ui-selectonemenu
+{
+	width: 300px !important;
+	margin-left: 0 !important;
+	float: left !important;
+}
+.customtabs_model_bb label .span_model_nm {
+	width: 250px;
+	text-align: left;
+	color: #778D9B;
+	font-size: 17px;
+}
+.customtabs_model_bb .tabspad #approveForm label {
+	padding: 10px 20px;
+}
+.customtabs_model_bb .tabspad #approveForm label.rollbackbutton {
+	float: right !important;margin:0 5%;
+}
+.customtabs_model_bb .tabspad label:before{display:none;}
+.customtabs_model_bb #updExtForm label {
+	width: 100%;
+	float: left;
+}
+.customtabs_model_bb #updExtForm div{margin: 0px 0%; width:100%;}
+.customtabs_model_bb #validateForm label,
+.customtabs_model_bb .tabspad #rvwMainFrm label,
+.customtabs_model_bb .tabspad #approveForm label
+
+{width: 84%;	float: left;	margin: 0 0%;}
+.customtabs_model_bb #rvwMainFrm .ui-outputlabel div{float:left !important;}
+.customtabs_model_bb #validateForm label.rollbackbutton {
+	margin: 0 5%;
+}
+.customtabs_model_bb .ui-accordion {
+	float: left;
+	width:100% !important;
+	top: -25px;
+	position: relative;
+}
+.customtabs_model_bb .ui-slider-vertical {
+	left: -4px;
+}
+.customtabs_model_bb .ui-slider-vertical .ui-slider-handle {
+	left: -10px !important;
+}
+.customtabs_model_bb h3.ui-accordion-header.ui-helper-reset.ui-state-default.ui-corner-all,
+.customtabs_model_bb h3.ui-accordion-header.ui-helper-reset.ui-state-default.ui-state-active.ui-corner-top{
+	background: #8F9D9D !important;
+}
+main.customtabs_model{background: #F6FAFC/*#F1F6F9*/;}
+.customtabs_model_bb .reviewbarContainer{    float: left;
+	width: 100%;
+	margin: 15px 0 25px;}
+.customtabs_model_bb .ui-chkbox.ui-widget {
+	padding: 10px 0;
+}
+.customtabs_model_bb .customRadioBlock {
+	margin: 20px 0 0;
+}
+.customtabs_model_bb section {
+	margin: 10px 0;
+	width: 100%;
+	padding:0;
+}
+.customtabs_model_bb #rvwMainFrm .ui-accordion {
+	top: 0;
+}
